# Torque_Compliance

./: .gitignore  AGENTS.md  MISSION_1.md  Prompt.md  README.md  pyproject.toml  requirements.txt
configs/: dataset.yaml  train_contact.yaml  train_observer.yaml  train_phase.yaml
docs/: status.md
scripts/: 00_scan_files.py  01_build_index.py  02_extract_insert_segments.py  03_align_modalities.py  04_make_phase_labels.py  05_make_contact_labels.py  06_export_windows.py  07_train_baseline.py  08_train_observer.py  09_eval.py
src/reassemble_minexp/: __init__.py
src/reassemble_minexp/dataset/: __init__.py  insert_index.py  trial_index.py  window_dataset.py
src/reassemble_minexp/eval/: __init__.py  evaluator.py  visualizer.py
src/reassemble_minexp/io/: __init__.py  h5_reader.py  pose_json_reader.py  segment_parser.py  timestamp_aligner.py
src/reassemble_minexp/labels/: __init__.py  contact_rule_labeler.py  phase_mapper.py
src/reassemble_minexp/models/: __init__.py  gru.py  heads.py  mlp.py  observer.py  tcn.py
src/reassemble_minexp/train/: __init__.py  losses.py  metrics.py  trainer.py
src/reassemble_minexp/utils/: __init__.py  config.py  logging_utils.py  paths.py  seed.py
tests/: test_config.py  test_contact_rule_labeler.py  test_insert_index.py  test_metrics.py  test_phase_mapper.py  test_timestamp_aligner.py  test_trial_index.py  test_window_dataset.py
