[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reassemble-minexp"
version = "0.1.0"
description = "Minimal REASSEMBLE observer experiment scaffold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "h5py>=3.10",
  "omegaconf>=2.3",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
